Fixed useEffect dependencies in some files and validate account when another type in login

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,13 @@ DATABASE_PORT=
 DATABASE_NAME=
 
 JWT_SECRET=
+
+CAPTCHA_SECRET=
+
+MAIL_HOST=
+MAIL_USER=
+MAIL_PASSWORD=
+MAIL_FROM=
+MAIL_FROM_NAME=
+
+ACTIVATE_ACCOUNT_URL=
