--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
     "class-validator": "^0.14.0",
     "info": "^0.0.6-beta.0",
     "joi": "^17.7.1",
+    "mysql2": "^3.3.3",
+    "nest-mysql": "^0.0.8",
     "nodemailer": "^6.9.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
