--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ MAIL_FROM=
 MAIL_FROM_NAME=
 
 ACTIVATE_ACCOUNT_URL=
+
+CLOUDINARY_URL=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
