--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "@nestjs/swagger": "^6.2.1",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.37.3",
     "info": "^0.0.6-beta.0",
     "joi": "^17.7.1",
     "mysql2": "^3.3.3",
@@ -53,6 +55,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/nodemailer": "^6.4.8",
     "@types/passport-jwt": "^3.0.8",
